@@ -84,8 +84,6 @@ function build_change_list() {
 	}
 }
 
-var prvpos = null
-
 
 function show_input_tx() {
 	var aj = ajax()
