@@ -274,7 +274,6 @@ function deltx_click(id) {
 	txrawdata.innerText = ''
 }
 
-var prvpos = null
 var tx_decoding_in_progress = false
 
 function decode_tx() {
