@@ -13,8 +13,6 @@
 
 <script>
 /*WALLET_JS_VARS*/
-var prvpos = null
-
 var qrcode = new QRCode(document.getElementById("qrcode"), {width:300, height:300})
 
 function showqrcode(label, addr) {
